--- a/README
+++ b/README
@@ -1,2 +1,5 @@
-$ git submodule update --init --recursive
-$ ./install.sh
+git submodule update --init --recursive
+./install.sh
+
+cd vim/vim/bundle/YouCompleteMe
+./install.sh --clang-completer
