--- a/README
+++ b/README
@@ -1,2 +1,8 @@
 git submodule update --init --recursive
+
+cd vim/.vim/bundle/command-t/ruby/command-t
+ruby extconf.rb
+make
+cd ../../../../../..
+
 ./install.sh
