--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Arch Linux
 ----------
 
-sudo pacaur -S stow neovim xss-lock-git playerctl maim slop xclip light kbdlight noto-fonts powerline-fonts-git ttf-font-awesome numix-themes numix-icon-theme-git adwaita-icon-theme
+sudo pacaur -S stow neovim xss-lock-git playerctl maim slop xclip light kbdlight noto-fonts powerline-fonts-git ttf-font-awesome numix-themes numix-icon-theme-git adwaita-icon-theme rxvt-unicode
 ./install.sh
 
 Mac OS X
