--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Arch Linux
 ----------
 
-sudo pacaur -S stow neovim xss-lock-git playerctl maim slop xclip light kbdlight noto-fonts powerline-fonts-git ttf-font-awesome gtk-theme-arc numix-icon-theme-git rofi qt5-qtstyleplugins xorg-xdpyinfo
+sudo pacaur -S stow neovim xss-lock-git playerctl maim slop xclip light kbdlight noto-fonts powerline-fonts-git ttf-font-awesome gtk-theme-arc numix-icon-theme-git rofi qt5-qtstyleplugins xorg-xdpyinfo termite
 ./install.sh
 
 Mac OS X
