--- a/README
+++ b/README
@@ -4,6 +4,12 @@ Arch Linux
 sudo pacaur -S stow neovim
 ./install.sh
 
+Gentoo
+------
+
+sudo emerge --ask app-admin/stow
+./install.sh
+
 Mac OS X
 --------
 
